test/units/TypingSpec/invalid/types/case-var-binds-2.algst
\(p : (Int, Int)) -> case p of {
  (,) -> 0,
}
